Font should work now + recommendation page and banner

--- a/JSP/bootstrap/css/bootstrap.css
+++ b/JSP/bootstrap/css/bootstrap.css
@@ -118,6 +118,12 @@ textarea {
   font: inherit;
   color: inherit;
 }
+select{
+color: #000000;
+  }
+  input{
+color: #000000;
+  }
 button {
   overflow: visible;
 }
